Fixes to blur, z-index of video icon

--- a/less/components/consonant/cards/3-2.less
+++ b/less/components/consonant/cards/3-2.less
@@ -61,7 +61,7 @@
 
         background: transparent url(@consonant-card-play-ico-data) no-repeat 0 0;
         background-size: cover;
-        z-index: 2;
+        z-index: 1;
         cursor: pointer;
         transform-origin: 50% 50%;
         transition: transform @transition-time @transition-func;
